syntax = "proto3";

package nogfso;
option go_package = "nogfsopb";

service TestUdo {
    rpc TestUdo(TestUdoI) returns (TestUdoO);
}

message TestUdoI {
    string username = 1;
    string domain = 2;
    string global_path = 3;
}

message TestUdoO {
    string process_username = 1;
    int64 mtime = 2;
    uint32 mode = 3;
}
